--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,29 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" integrity="sha384-Jxho9xW+hEo1EeBa5eTidkpujeRER4w/Uoi2yfYs3YWeCsfPOldLjhpF0YtxWV+G" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css"
+      integrity="sha384-Jxho9xW+hEo1EeBa5eTidkpujeRER4w/Uoi2yfYs3YWeCsfPOldLjhpF0YtxWV+G"
+      crossorigin="anonymous"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://demo.themesberg.com/landwind/images/logo.svg"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link
+      rel="manifest"
+      href="https://demo.themesberg.com/landwind/images/logo.svg"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +37,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="shortcut rol"
+      href="https://demo.themesberg.com/landwind/images/logo.svg"
+    />
     <title>React App</title>
   </head>
   <body>
